volcanic torches: ITS ALIVE!